static/styles.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
  transition: all 0.3s ease;
}
p {
  font-size: xx-large;
}
body {
  height: 100vh;
  width: 100%;
  display: flex;
  background-image: linear-gradient(135deg, #ff9a9e 10%, #f6416c 100%);
}
::selection {
  color: #f2f2f2;
  background: #f86d8d;
}
body::before,
body::after {
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
}
body::before {
  clip-path: circle(30% at left 20%);
  opacity: 0.4;
  background-image: linear-gradient(135deg, #f6416c 10%, #ff9a9e 100%);
}
body::after {
  opacity: 0.4;
  clip-path: circle(25% at right 80%);
  background-image: linear-gradient(135deg, #f6416c 10%, #ff9a9e 100%);
}
header {
  max-height: 100vh;
  height: 100vh;
  width: 90%;
  background: rgba(255, 255, 255, 0.1);
  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.15);
  border-top: 1px solid rgba(255, 255, 255, 0.5);
  border-left: 1px solid rgba(255, 255, 255, 0.5);
  backdrop-filter: blur(5px);
  z-index: 12;
  border-radius: 25px;
  margin: auto;
  position: relative;
}

@media (max-width: 850px) {
  header .navbar {
    padding: 20px 30px;
  }
  .navbar .menu {
    margin: 10px 0 20px 0;
  }
  header .text-content {
    margin: 30px 0 0 20px;
    width: 70%;
  }
  header .text-content h2 {
    font-size: 20px;
  }
}
@media (max-width: 410px) {
  header {
    height: 100vh;
    width: 100%;
    border-radius: 0px;
  }
  header .navbar {
    padding: 20px 15px;
  }
}

.center {
  display: block;
  margin-left: auto;
  margin-right: auto;
  /* width: 50%; */
}
#error img {
  width: 100%;
  height: auto;
  max-height: 550px;
  border-radius: 5px;
}

#nav {
  border-radius: 20px;
  background-color: rgba(0, 0, 0, 0.781);
  padding: 20px 30px;
}

.video-wrapper {
  position: relative;
  padding-bottom: 74.25%; /* 4:3 ratio */
  padding-top: 30px; /* IE6 workaround*/
  height: 0;
  overflow: hidden;
  width: 100%;
  margin: 0 auto;
}

/* https://codepen.io/nosecreek/pen/AwBVLd */
.video-wrapper-narrow {
  padding-bottom: 40%;
}

iframe,
object,
embed,
video,
.videoWrapper,
.video-js {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.video-js,
img.vjs-poster {
  width: 100% !important;
  height: 100% !important;
  max-width: 100%;
}

